# pythonic-experiments

./: Cargo.toml  LICENSE  README.md  Settings-default.toml  rust-toolchain
examples/: png.rs  png_py.rs  run_ipca_op.rs  run_kmeans_op.rs
src/: error.rs  example_operator.rs  example_pyop.rs  ipca.py  ipca_operator.rs  kmeans.py  kmeans_operator.rs  lib.rs  simple_pca.py
