[package]
name = "pythonic-experiments"
version = "0.1.0"
authors = ["Christian Beilschmidt <beilschmidt@mathematik.uni-marburg.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
futures = "0.3"
# geoengine-datatypes = { path = "/home/debian/fopra/205e899/datatypes" }
# geoengine-operators = { path = "/home/debian/fopra/205e899/operators" }
# geoengine-services = { path = "/home/debian/fopra/205e899/services" }
geoengine-datatypes = { git = "https://github.com/geo-engine/geoengine.git" }
geoengine-operators = { git = "https://github.com/geo-engine/geoengine.git" }
geoengine-services = { git = "https://github.com/geo-engine/geoengine.git" }
reqwest = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
snafu = "0.6"
tokio = { version = "1.1", features = ["macros", "signal", "sync", "rt-multi-thread"] }
typetag = "0.1"
warp = "0.3"
pyo3 = "*"
# pyo3-asyncio = "*"
numpy = "*"
ndarray = "*"

[dependencies.pyo3-asyncio]
version = "0.13.0"
features = ["tokio-runtime"]